--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.25.0.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.25.0.yaml
@@ -99,8 +99,8 @@ coreos:
         After=download-script.service
     content: |
       [Unit]
-      After=docker.service
-      Requires=docker.service
+      After=containerd.service
+      Requires=containerd.service
 
       Description=kubelet: The Kubernetes Node Agent
       Documentation=https://kubernetes.io/docs/home/
@@ -129,11 +129,8 @@ coreos:
         --hostname-override=node1 \
         --exit-on-lock-contention \
         --lock-file=/tmp/kubelet.lock \
-        --container-runtime=docker \
-        --container-runtime-endpoint=unix:///var/run/dockershim.sock \
-        --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
-        --feature-gates=DynamicKubeletConfig=true \
-        --network-plugin=cni \
+        --container-runtime=remote \
+        --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
         --node-ip ${KUBELET_NODE_IP}
 
       [Install]
@@ -429,7 +426,7 @@ write_files:
     rm -f "$cri_tools_filename"
     ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
-    KUBE_VERSION="${KUBE_VERSION:-v1.22.7}"
+    KUBE_VERSION="${KUBE_VERSION:-v1.25.0}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
     kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
     kube_sum_file="$kube_dir/sha256"
@@ -454,8 +451,18 @@ write_files:
     fi
 
 
+    mkdir -p /etc/systemd/system/containerd.service.d
+
+    cat <<EOF | tee /etc/systemd/system/containerd.service.d/10-machine-controller.conf
+    [Service]
+    Restart=always
+    Environment=CONTAINERD_CONFIG=/etc/containerd/config.toml
+    ExecStart=
+    ExecStart=/usr/bin/env PATH=\${TORCX_BINDIR}:\${PATH} \${TORCX_BINDIR}/containerd --config \${CONTAINERD_CONFIG}
+    EOF
+
     systemctl daemon-reload
-    systemctl enable --now docker
+    systemctl enable --now containerd
 
     systemctl disable download-script.service
 
@@ -478,11 +485,28 @@ write_files:
     CASignatureAlgorithms ecdsa-sha2-nistp256,ecdsa-sha2-nistp384,ecdsa-sha2-nistp521,ssh-ed25519,rsa-sha2-512,rsa-sha2-256,ssh-rsa
   append: true
 
-- path: /etc/docker/daemon.json
+- path: /etc/containerd/config.toml
   permissions: "0644"
   user: root
   content: |
-    {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-file":"5","max-size":"100m"}}
+    version = 2
+
+    [metrics]
+    address = "127.0.0.1:1338"
+
+    [plugins]
+    [plugins."io.containerd.grpc.v1.cri"]
+    [plugins."io.containerd.grpc.v1.cri".containerd]
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes]
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
+    runtime_type = "io.containerd.runc.v2"
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
+    SystemdCgroup = true
+    [plugins."io.containerd.grpc.v1.cri".registry]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
+    endpoint = ["https://registry-1.docker.io"]
+
 
 - path: /etc/crictl.yaml
   permissions: "0644"
