--- a/pkg/userdata/sles/testdata/version-1.24.7.yaml
+++ b/pkg/userdata/sles/testdata/version-1.24.7.yaml
@@ -8,15 +8,6 @@ ssh_authorized_keys:
 - "ssh-rsa AAABBB"
 
 write_files:
-- path: "/etc/environment"
-  content: |
-    PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games"
-    HTTP_PROXY=http://192.168.100.100:3128
-    http_proxy=http://192.168.100.100:3128
-    HTTPS_PROXY=http://192.168.100.100:3128
-    https_proxy=http://192.168.100.100:3128
-    NO_PROXY=192.168.1.0
-    no_proxy=192.168.1.0
 
 - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
   content: |
@@ -67,7 +58,6 @@ write_files:
       e2fsprogs \
       jq \
       socat \
-      open-vm-tools \
       ipvsadm
 
     opt_bin=/opt/bin
@@ -111,7 +101,7 @@ write_files:
     rm -f "$cri_tools_filename"
     ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
-    KUBE_VERSION="${KUBE_VERSION:-v1.23.13}"
+    KUBE_VERSION="${KUBE_VERSION:-v1.24.7}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
     kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
     kube_sum_file="$kube_dir/sha256"
@@ -166,8 +156,8 @@ write_files:
 - path: "/etc/systemd/system/kubelet.service"
   content: |
     [Unit]
-    After=docker.service
-    Requires=docker.service
+    After=containerd.service
+    Requires=containerd.service
 
     Description=kubelet: The Kubernetes Node Agent
     Documentation=https://kubernetes.io/docs/home/
@@ -193,15 +183,11 @@ write_files:
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
       --cert-dir=/etc/kubernetes/pki \
-      --cloud-provider=vsphere \
-      --cloud-config=/etc/kubernetes/cloud-config \
       --hostname-override=node1 \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
-      --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
-      --container-runtime=docker \
-      --container-runtime-endpoint=unix:///var/run/dockershim.sock \
-      --network-plugin=cni \
+      --container-runtime=remote \
+      --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
       --node-ip ${KUBELET_NODE_IP}
 
     [Install]
@@ -215,9 +201,7 @@ write_files:
 - path: "/etc/kubernetes/cloud-config"
   permissions: "0600"
   content: |
-    custom
-    cloud
-    config
+
 
 - path: "/opt/bin/setup_net_env.sh"
   permissions: "0755"
@@ -396,10 +380,27 @@ write_files:
   content: |
     export PATH="/opt/bin:$PATH"
 
-- path: /etc/docker/daemon.json
+- path: /etc/containerd/config.toml
   permissions: "0644"
   content: |
-    {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-file":"5","max-size":"100m"},"insecure-registries":["192.168.100.100:5000","10.0.0.1:5000"]}
+    version = 2
+
+    [metrics]
+    address = "127.0.0.1:1338"
+
+    [plugins]
+    [plugins."io.containerd.grpc.v1.cri"]
+    [plugins."io.containerd.grpc.v1.cri".containerd]
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes]
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
+    runtime_type = "io.containerd.runc.v2"
+    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
+    SystemdCgroup = true
+    [plugins."io.containerd.grpc.v1.cri".registry]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
+    endpoint = ["https://registry-1.docker.io"]
+
 
 - path: /etc/systemd/system/kubelet-healthcheck.service
   permissions: "0644"
@@ -419,8 +420,8 @@ write_files:
   permissions: "0644"
   content: |
     [Unit]
-    Requires=docker.service
-    After=docker.service
+    Requires=containerd.service
+    After=containerd.service
 
     [Service]
     ExecStart=/opt/bin/health-monitor.sh container-runtime
