--- a/pkg/userdata/ubuntu/testdata/version-1.25.0.yaml
+++ b/pkg/userdata/ubuntu/testdata/version-1.25.0.yaml
@@ -85,22 +85,22 @@ write_files:
       curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
       add-apt-repository "deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
 
-      cat <<EOF | tee /etc/crictl.yaml
-      runtime-endpoint: unix:///run/containerd/containerd.sock
-      EOF
+      mkdir -p /etc/systemd/system/containerd.service.d /etc/systemd/system/docker.service.d
 
-      mkdir -p /etc/systemd/system/containerd.service.d
-      cat <<EOF | tee /etc/systemd/system/containerd.service.d/environment.conf
+      cat <<EOF | tee /etc/systemd/system/containerd.service.d/environment.conf /etc/systemd/system/docker.service.d/environment.conf
       [Service]
       Restart=always
       EnvironmentFile=-/etc/environment
       EOF
 
-      apt-get install -y --allow-downgrades containerd.io=1.6*
-      apt-mark hold containerd.io
+      apt-get install --allow-downgrades -y \
+          containerd.io=1.6* \
+          docker-ce-cli=5:20.10* \
+          docker-ce=5:20.10*
+      apt-mark hold docker-ce* containerd.io
 
       systemctl daemon-reload
-      systemctl enable --now containerd
+      systemctl enable --now docker
 
 
       opt_bin=/opt/bin
@@ -144,7 +144,7 @@ write_files:
       rm -f "$cri_tools_filename"
       ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
       cd -
-      KUBE_VERSION="${KUBE_VERSION:-v1.24.0}"
+      KUBE_VERSION="${KUBE_VERSION:-v1.22.7}"
       kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
       kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
       kube_sum_file="$kube_dir/sha256"
@@ -193,8 +193,8 @@ write_files:
   - path: "/etc/systemd/system/kubelet.service"
     content: |
       [Unit]
-      After=containerd.service
-      Requires=containerd.service
+      After=docker.service
+      Requires=docker.service
 
       Description=kubelet: The Kubernetes Node Agent
       Documentation=https://kubernetes.io/docs/home/
@@ -223,8 +223,11 @@ write_files:
         --hostname-override=node1 \
         --exit-on-lock-contention \
         --lock-file=/tmp/kubelet.lock \
-        --container-runtime=remote \
-        --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
+        --container-runtime=docker \
+        --container-runtime-endpoint=unix:///var/run/dockershim.sock \
+        --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
+        --feature-gates=DynamicKubeletConfig=true \
+        --network-plugin=cni \
         --node-ip ${KUBELET_NODE_IP}
 
       [Install]
@@ -340,26 +343,10 @@ write_files:
     content: |
       export PATH="/opt/bin:$PATH"
 
-  - path: /etc/containerd/config.toml
+  - path: /etc/docker/daemon.json
     permissions: "0644"
     content: |
-      version = 2
-
-      [metrics]
-      address = "127.0.0.1:1338"
-
-      [plugins]
-      [plugins."io.containerd.grpc.v1.cri"]
-      [plugins."io.containerd.grpc.v1.cri".containerd]
-      [plugins."io.containerd.grpc.v1.cri".containerd.runtimes]
-      [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
-      runtime_type = "io.containerd.runc.v2"
-      [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
-      SystemdCgroup = true
-      [plugins."io.containerd.grpc.v1.cri".registry]
-      [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-      [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
-      endpoint = ["https://registry-1.docker.io"]
+      {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-file":"5","max-size":"100m"}}
 
   - path: "/etc/kubernetes/kubelet.conf"
     content: |
