--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.25.0.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.25.0.yaml
@@ -462,7 +462,7 @@ write_files:
     EOF
 
     systemctl daemon-reload
-    systemctl enable --now containerd
+    systemctl restart containerd
 
     systemctl disable download-script.service
 
