--- a/pkg/userdata/flatcar/testdata/containerd.yaml
+++ b/pkg/userdata/flatcar/testdata/containerd.yaml
@@ -445,7 +445,7 @@ write_files:
     EOF
 
     systemctl daemon-reload
-    systemctl enable --now containerd
+    systemctl restart containerd
 
     systemctl disable download-script.service
 
