Add ClusterName to KubeVirt providerconfig
Signed-off-by: Moritz Bracht <mail@morz.me>

--- a/pkg/cloudprovider/provider/kubevirt/testdata/affinity.yaml
+++ b/pkg/cloudprovider/provider/kubevirt/testdata/affinity.yaml
@@ -3,7 +3,7 @@ kind: VirtualMachine
 metadata:
   annotations:
   labels:
-    cluster.x-k8s.io/cluster-name: test-namespace
+    cluster.x-k8s.io/cluster-name: cluster-name
     cluster.x-k8s.io/role: worker
     kubevirt.io/vm: affinity
     md: md-name
@@ -29,7 +29,7 @@ spec:
   template:
     metadata:
       labels:
-        cluster.x-k8s.io/cluster-name: test-namespace
+        cluster.x-k8s.io/cluster-name: cluster-name
         cluster.x-k8s.io/role: worker
         kubevirt.io/vm: affinity
         md: md-name
