--- a/pkg/cloudprovider/provider/kubevirt/testdata/http-image-source.yaml
+++ b/pkg/cloudprovider/provider/kubevirt/testdata/http-image-source.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
   labels:
     kubevirt.io/vm: http-image-source
-    cluster.x-k8s.io/cluster-name: test-namespace
+    cluster.x-k8s.io/cluster-name: cluster-name
     cluster.x-k8s.io/role: worker
     md: md-name
   name: http-image-source
@@ -30,7 +30,7 @@ spec:
       creationTimestamp: null
       labels:
         kubevirt.io/vm: http-image-source
-        cluster.x-k8s.io/cluster-name: test-namespace
+        cluster.x-k8s.io/cluster-name: cluster-name
         cluster.x-k8s.io/role: worker
         md: md-name
     spec:
