--- a/pkg/cloudprovider/provider/kubevirt/testdata/secondary-disks.yaml
+++ b/pkg/cloudprovider/provider/kubevirt/testdata/secondary-disks.yaml
@@ -3,7 +3,7 @@ kind: VirtualMachine
 metadata:
   annotations:
   labels:
-    cluster.x-k8s.io/cluster-name: test-namespace
+    cluster.x-k8s.io/cluster-name: cluster-name
     cluster.x-k8s.io/role: worker
     kubevirt.io/vm: secondary-disks
     md: md-name
@@ -55,7 +55,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        cluster.x-k8s.io/cluster-name: test-namespace
+        cluster.x-k8s.io/cluster-name: cluster-name
         cluster.x-k8s.io/role: worker
         kubevirt.io/vm: secondary-disks
         md: md-name
