--- a/examples/kubevirt-machinedeployment.yaml
+++ b/examples/kubevirt-machinedeployment.yaml
@@ -26,6 +26,7 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
+            clusterName: cluster-name
             auth:
               kubeconfig:
                 # Can also be set via the env var 'KUBEVIRT_KUBECONFIG' on the machine-controller.
