Change vcenter datastore to ceph
Signed-off-by: Moritz Bracht <mail@morz.me>

--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
@@ -31,7 +31,7 @@ spec:
             folder: '/Hamburg/vm/Kubermatic-dev'
             password: << VSPHERE_PASSWORD >>
             # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
-            datastore: alpha1
+            datastore: ceph-vm
             allowInsecure: true
             cpus: 2
             MemoryMB: 2048
