Add cluster labels to kubevirt vm (#1472)
* Add cluster labels to KubeVirt VM

Linter: Drop unnecessary else block

Signed-off-by: Moritz Bracht <mail@morz.me>

Use MC namespace as cluster-name label

Signed-off-by: Moritz Bracht <mail@morz.me>

* Upgrade kubevirt.io/api to v0.58.0

Signed-off-by: Moritz Bracht <mail@morz.me>

* Clean up trailing whitespace

Signed-off-by: Moritz Bracht <mail@morz.me>

* Adjust test data to new cluster labels

Signed-off-by: Moritz Bracht <mail@morz.me>

Fix typo

Signed-off-by: Moritz Bracht <mail@morz.me>

revert rename of test-namespace

Signed-off-by: Moritz Bracht <mail@morz.me>

* Add ClusterName to KubeVirt providerconfig

Signed-off-by: Moritz Bracht <mail@morz.me>

* Add documentation of new clusterName field for kubevirt

Signed-off-by: Moritz Bracht <mail@morz.me>

Signed-off-by: Moritz Bracht <mail@morz.me>

--- a/pkg/cloudprovider/provider/kubevirt/testdata/affinity.yaml
+++ b/pkg/cloudprovider/provider/kubevirt/testdata/affinity.yaml
@@ -3,6 +3,8 @@ kind: VirtualMachine
 metadata:
   annotations:
   labels:
+    cluster.x-k8s.io/cluster-name: cluster-name
+    cluster.x-k8s.io/role: worker
     kubevirt.io/vm: affinity
     md: md-name
   name: affinity
@@ -27,6 +29,8 @@ spec:
   template:
     metadata:
       labels:
+        cluster.x-k8s.io/cluster-name: cluster-name
+        cluster.x-k8s.io/role: worker
         kubevirt.io/vm: affinity
         md: md-name
     spec:
