--- a/pkg/cloudprovider/provider/kubevirt/testdata/pvc-image-source.yaml
+++ b/pkg/cloudprovider/provider/kubevirt/testdata/pvc-image-source.yaml
@@ -4,6 +4,8 @@ metadata:
   annotations:
   labels:
     kubevirt.io/vm: pvc-image-source
+    cluster.x-k8s.io/cluster-name: cluster-name
+    cluster.x-k8s.io/role: worker
     md: md-name
   name: pvc-image-source
   namespace: test-namespace
@@ -29,6 +31,8 @@ spec:
       creationTimestamp: null
       labels:
         kubevirt.io/vm: pvc-image-source
+        cluster.x-k8s.io/cluster-name: cluster-name
+        cluster.x-k8s.io/role: worker
         md: md-name
     spec:
       affinity: {}
