--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,23 +1,34 @@
 name: Publish docker image
 on:
   push:
-    tags:
-      - 'v*'
+  pull_request:
 jobs:
-  publish:
+
+  test:
+    name: run unit tests
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Unshallow
-        run: git fetch --prune --unshallow
+        uses: actions/checkout@v3
       -
         name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.16
+          go-version: 1.18
+          cache: true
+      -
+        name: Run the tests
+        run: make test-unit
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
       -
         name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -25,13 +36,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: syseleven/machine-controller
-      -
-        name: run make 
+        name: run make
         env:
           REGISTRY_NAMESPACE: syseleven
         run: make IMAGE_TAG=$(basename $GITHUB_REF) docker-image-publish
