--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,11 +1,30 @@
 name: Publish docker image
 on:
   push:
-    tags:
-      - 'v*'
+  pull_request:
 jobs:
+
+  test:
+    name: run unit tests
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+          cache: true
+      -
+        name: Run the tests
+        run: make test-unit
+
   publish:
     runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       -
         name: Checkout
@@ -14,24 +33,13 @@ jobs:
         name: Unshallow
         run: git fetch --prune --unshallow
       -
-        name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.16
-      -
         name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: syseleven/machine-controller
-      -
-        name: run make 
+        name: run make
         env:
           REGISTRY_NAMESPACE: syseleven
         run: make IMAGE_TAG=$(basename $GITHUB_REF) docker-image-publish
