--- a/.prow/provider-azure.yaml
+++ b/.prow/provider-azure.yaml
@@ -43,7 +43,7 @@ presubmits:
               memory: 7Gi
 
   - name: pull-machine-controller-e2e-azure-custom-image-reference
-    always_run: true
+    run_if_changed: "(pkg/cloudprovider/provider/azure/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
