--- a/.prow/provider-gcp.yaml
+++ b/.prow/provider-gcp.yaml
@@ -14,7 +14,7 @@
 
 presubmits:
   - name: pull-machine-controller-e2e-gce
-    always_run: true
+    run_if_changed: "(pkg/cloudprovider/provider/gce/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
