--- a/.prow/provider-openstack.yaml
+++ b/.prow/provider-openstack.yaml
@@ -14,7 +14,7 @@
 
 presubmits:
   - name: pull-machine-controller-e2e-openstack
-    always_run: true
+    run_if_changed: "(pkg/cloudprovider/provider/openstack/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
@@ -43,7 +43,7 @@ presubmits:
               memory: 7Gi
 
   - name: pull-machine-controller-e2e-openstack-project-auth
-    always_run: true
+    run_if_changed: "(pkg/cloudprovider/provider/openstack/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
