Fix license and module proxy issue
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -32,3 +32,4 @@ exceptions:
   - github.com/embik/nutanix-client-go/internal/utils # MPL-2.0
   - github.com/ajeddeloh/go-json # Since it's a fork, https://github.com/golang/go/blob/master/LICENSE
   - github.com/hashicorp/go-version # MPL-2.0
+  - github.com/hashicorp/go-cleanhttp # MPL-2.0
