--- a/.prow/e2e-features.yaml
+++ b/.prow/e2e-features.yaml
@@ -26,7 +26,7 @@ presubmits:
       preset-hetzner: "true"
       preset-openstack: "true"
       preset-vsphere: "true"
-      preset-kubevirt-dc: "true"
+      preset-kubevirt: "true"
       preset-alibaba: "true"
       preset-goproxy: "true"
       preset-kind-volume-mounts: "true"
