support prow-based provider disabling

--- a/.prow/provider-anexia.yaml
+++ b/.prow/provider-anexia.yaml
@@ -36,6 +36,8 @@ presubmits:
             # OperatingSystemManager does not yet support Anexia
             - name: OPERATING_SYSTEM_MANAGER
               value: "false"
+            - name: CLOUD_PROVIDER
+              value: anexia
           securityContext:
             privileged: true
           resources:
