--- a/.prow/provider-alibaba.yaml
+++ b/.prow/provider-alibaba.yaml
@@ -34,6 +34,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAlibabaProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: alibaba
           securityContext:
             privileged: true
           resources:
