--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -33,6 +33,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -61,6 +64,8 @@ presubmits:
           env:
             - name: OPERATING_SYSTEM_MANAGER
               value: "false"
+            - name: CLOUD_PROVIDER
+              value: aws
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -93,6 +98,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSARMProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -121,6 +129,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSEbsEncryptionEnabledProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -149,6 +160,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSFlatcarContainerdProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -178,6 +192,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSSpotInstanceProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -206,6 +223,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSSLESProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -234,6 +254,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSFlatcarCoreOSCloudInit8ProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -262,6 +285,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSCentOS8ProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
@@ -290,6 +316,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAWSAssumeRoleProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: aws
           securityContext:
             privileged: true
           resources:
