--- a/.prow/provider-azure.yaml
+++ b/.prow/provider-azure.yaml
@@ -33,6 +33,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAzureProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: azure
           securityContext:
             privileged: true
           resources:
@@ -62,6 +65,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAzureCustomImageReferenceProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: azure
           securityContext:
             privileged: true
           resources:
@@ -92,6 +98,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestAzureProvisioningE2ERedhatSatellite"
+          env:
+            - name: CLOUD_PROVIDER
+              value: azure
           securityContext:
             privileged: true
           resources:
