--- a/.prow/provider-equinix-metal.yaml
+++ b/.prow/provider-equinix-metal.yaml
@@ -33,6 +33,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestEquinixMetalProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: metal
           securityContext:
             privileged: true
           resources:
