--- a/.prow/provider-hetzner.yaml
+++ b/.prow/provider-hetzner.yaml
@@ -31,6 +31,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestHetznerProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: hetzner
           securityContext:
             privileged: true
           resources:
