--- a/.prow/provider-kubevirt.yaml
+++ b/.prow/provider-kubevirt.yaml
@@ -35,6 +35,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestKubevirtProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: kubevirt
           securityContext:
             privileged: true
           resources:
