--- a/.prow/provider-linode.yaml
+++ b/.prow/provider-linode.yaml
@@ -33,6 +33,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestLinodeProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: linode
           securityContext:
             privileged: true
           resources:
