--- a/.prow/provider-nutanix.yaml
+++ b/.prow/provider-nutanix.yaml
@@ -32,6 +32,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestNutanixProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: nutanix
           securityContext:
             privileged: true
           resources:
