--- a/.prow/provider-openstack.yaml
+++ b/.prow/provider-openstack.yaml
@@ -33,6 +33,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestOpenstackProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: openstack
           securityContext:
             privileged: true
           resources:
@@ -62,6 +65,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestOpenstackProjectAuthProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: openstack
           securityContext:
             privileged: true
           resources:
