--- a/.prow/provider-scaleway.yaml
+++ b/.prow/provider-scaleway.yaml
@@ -32,6 +32,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestScalewayProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: scaleway
           securityContext:
             privileged: true
           resources:
