--- a/.prow/provider-vmware-cloud-director.yaml
+++ b/.prow/provider-vmware-cloud-director.yaml
@@ -34,6 +34,9 @@ presubmits:
             - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestVMwareCloudDirectorProvisioningE2E"
+          env:
+            - name: CLOUD_PROVIDER
+              value: vcd
           securityContext:
             privileged: true
           resources:
