--- a/.prow/provider-azure.yaml
+++ b/.prow/provider-azure.yaml
@@ -14,7 +14,7 @@
 
 presubmits:
   - name: pull-machine-controller-e2e-azure
-    always_run: true
+    run_if_changed: "(pkg/cloudprovider/provider/azure/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
@@ -43,7 +43,7 @@ presubmits:
               memory: 6Gi
 
   - name: pull-machine-controller-e2e-azure-custom-image-reference
-    always_run: true
+    run_if_changed: "(pkg/cloudprovider/provider/azure/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
@@ -73,7 +73,7 @@ presubmits:
 
   - name: pull-machine-controller-e2e-azure-redhat-satellite
     optional: true
-    always_run: false
+    run_if_changed: "(pkg/cloudprovider/provider/azure/|pkg/userdata)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
