Hardcode the OSP name for Anexia
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-anexia.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-anexia.yaml
@@ -4,7 +4,7 @@ metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
   annotations:
-    k8c.io/operating-system-profile: osp-<< OS_NAME >>
+    k8c.io/operating-system-profile: osp-flatcar-cloud-init
 spec:
   replicas: 1
   strategy:
