more adjustments to vsphere and kubevirt e2e

--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
@@ -28,9 +28,9 @@ spec:
             username: '<< VSPHERE_USERNAME >>'
             vsphereURL: '<< VSPHERE_ADDRESS >>'
             datacenter: 'Hamburg'
-            folder: '/Hamburg/vm/Kubermatic-dev'
+            folder: '/Hamburg/vm/Kubermatic-ci'
             password: << VSPHERE_PASSWORD >>
-            datastoreCluster: 'dsc-1'
+            datastore: 'vsan'
             resourcePool: 'e2e-resource-pool'
             cpus: 2
             MemoryMB: 2048
