--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
@@ -36,19 +36,11 @@ spec:
                 primaryDisk:
                   osImage: http://image-repo.kube-system.svc/images/<< KUBEVIRT_OS_IMAGE >>.img
                   size: "25Gi"
-                  storageClassName: longhorn
+                  storageClassName: px-csi-db
               dnsPolicy: "None"
               dnsConfig:
                 nameservers:
                   - 8.8.8.8
-            affinity:
-              podAffinityPreset: "" # Allowed values: "", "soft", "hard"
-              podAntiAffinityPreset: "" # Allowed values: "", "soft", "hard"
-              nodeAffinityPreset:
-                type: "" # Allowed values: "", "soft", "hard"
-                key: "foo"
-                values:
-                - bar
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
