Use OSM with Anexia E2E tests (#1582)
* Use OSM with Anexia E2E tests

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Always pull latest image for OSM

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Compute image for OSM

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Hardcode the OSP name for Anexia

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Make Anexia E2E tests optional

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/.prow/provider-anexia.yaml
+++ b/.prow/provider-anexia.yaml
@@ -14,6 +14,10 @@
 
 presubmits:
   - name: pull-machine-controller-e2e-anexia
+    # We've made the E2E tests for Anexia optional since it doesn't support k8s v1.26 at the moment.
+    # the tests on k8s v1.26+ will fail.
+    # TODO: These tests shouldn't be marked as optional.
+    optional: true
     always_run: false
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
@@ -33,9 +37,6 @@ presubmits:
           args:
             - "TestAnexiaProvisioningE2E"
           env:
-            # OperatingSystemManager does not yet support Anexia
-            - name: OPERATING_SYSTEM_MANAGER
-              value: "false"
             - name: CLOUD_PROVIDER
               value: anexia
           securityContext:
