Update go dependencies and re-generate fixture data
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/userdata/ubuntu/testdata/digitalocean-dualstack-IPv6+IPv4.yaml
+++ b/pkg/userdata/ubuntu/testdata/digitalocean-dualstack-IPv6+IPv4.yaml
@@ -400,6 +400,7 @@ write_files:
     - 10.10.10.12
     clusterDomain: cluster.local
     containerLogMaxSize: 100Mi
+    containerRuntimeEndpoint: ""
     cpuManagerReconcilePeriod: 0s
     evictionHard:
       imagefs.available: 15%
