--- a/pkg/userdata/centos/testdata/kubelet-v1.24.9-aws.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.24.9-aws.yaml
@@ -316,6 +316,7 @@ write_files:
     cgroupDriver: systemd
     clusterDomain: cluster.local
     containerLogMaxSize: 100Mi
+    containerRuntimeEndpoint: ""
     cpuManagerReconcilePeriod: 0s
     evictionHard:
       imagefs.available: 15%
