--- a/pkg/userdata/rhel/testdata/pod-cidr-azure-rhel.yaml
+++ b/pkg/userdata/rhel/testdata/pod-cidr-azure-rhel.yaml
@@ -329,6 +329,7 @@ write_files:
     cgroupDriver: systemd
     clusterDomain: cluster.local
     containerLogMaxSize: 100Mi
+    containerRuntimeEndpoint: ""
     cpuManagerReconcilePeriod: 0s
     evictionHard:
       imagefs.available: 15%
